# second-brain

./: .gitignore  Cargo.toml  Dioxus.toml  todo.txt
db/: claude_llm_list.txt  document_categories.json  ollama_embedding_list.txt  ollama_llm_list.txt  openai_embedding_list.txt  openai_llm_list.txt
db/chat_history/: 15-07-2024.json  17-07-2024.json  27-06-2024.json  28-06-2024.json  31-07-2024.json
db/vector_db/: db  snap.000000000000196F
lib/gemini-api/: Cargo.toml
lib/gemini-api/src/: lib.rs
public/css/: main.css  tailwind.css
public/js/: script.js
src/: main.rs  os_command.rs  our_document.rs  utils.rs  vector_db.rs
src/keywords/: keywords_extraction.rs  keywords_search.rs  mod.rs
src/llm/: candle_fw.rs  llm_api.rs  llm_thread.rs  mod.rs  prompt_template.rs
src/rw_text/: mod.rs  rw_txt.rs
